# lever-mcp

./: .env.example  .gitignore  DEPLOYMENT_FIXES.md  GOOGLE_SENDEMAIL_HTML_ISSUE.md  HTML_EMAIL_RENDERING_GUIDE.md  LOCAL_TESTING.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_SETUP.md  QUICKSTART_LOCAL.md  QUICKSTART_OAUTH.md  README.md  README_OAUTH_FLOW.md  README_TYPESCRIPT.md  SCOPE_MISMATCH_DIAGNOSIS.md  SETUP_SUMMARY.md  TESTING_CHECKLIST.md  TESTING_SUMMARY.md  TOQAN_OAUTH_GUIDE.md  TOQAN_SCOPE_ISSUE.md  TOQAN_SETUP.md  TYPESCRIPT_MIGRATION_COMPLETE.md  debug_scope_difference.md  investigate_google_scopes.py  oauth_flow_diagram.md  pyproject.toml  reproduce_issue.py  run.sh  run_dev.sh  run_http.sh  run_python.sh  run_sse.sh  run_typescript.sh  test_direct_oauth.py  test_dynamic_client_registration.py  test_email_response.py  test_email_tool.py  test_local_oauth.sh  test_oauth.py  test_oauth_proxy.py  test_scope_issue.py  (+5 more)
docs/: dynamic_client_registration.md
examples/: email_example.py
src/: client_registry.py  oauth_config.py  server.py
src/lever_mcp/: client.py  gmail_client.py  oauth_config.py  server.py
src/mcp/py/: gmail_client.py  server.py
src/mcp/ts/: .gitignore  package-lock.json  package.json  tsconfig.json
src/mcp/ts/src/: client.ts  email-templates.ts  gmail-client.ts  oauth-config.ts  server.ts
tests/: mock_toqan_client.py  simple_email_test.py  test_oauth_e2e.py  test_server.py
