[project]
name = "lever-mcp"
version = "0.1.0"
description = "MCP server for Lever.co"
dependencies = [
    "fastmcp",
    "httpx",
    "pydantic"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lever_mcp"]
